# searchy

./: README.md  pyproject.toml  requirements.txt  sandbox.ipynb  tox.ini
sample_data/images/: notanimage.txt
searchy/: __init__.py  __main__.py  searchyclient.py
