[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "searchy"
authors = [{name = "David Marx", email = "david.marx84@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
description-file = "README.md"
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/dmarx"
